<resources>
    <string name="I">我</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_share">b</string>
    <string name="activity_personal_settings">个人设置</string>
    <string name="agreement"><u>“用户协议”</u></string>
    <string name="album_name_all">All Media</string>
    <string name="android">Android</string>
    <string name="app_name">掘金</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="articles">阅读</string>
    <string name="asset_statements">"[{
 \"relation\": [\"delegate_permission/common.handle_all_urls\"],
 \"target\": {
 \"namespace\": \"web\",
 \"site\": \"http://juejin.im\",
 }
}]"</string>
    <string name="attention_tip">这里空空的什么都没有呢...</string>
    <string name="back">Back</string>
    <string name="backend">后端</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_add_category">添加标签</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_coeditor">联合编辑</string>
    <string name="button_done">完成</string>
    <string name="button_follow">关注</string>
    <string name="button_follow_tag">＋ 关注标签</string>
    <string name="button_following">已关注</string>
    <string name="button_go_to_home_page">逛逛首页</string>
    <string name="button_login">登录</string>
    <string name="button_logining">登录中...</string>
    <string name="button_ok">OK</string>
    <string name="button_preview">Preview</string>
    <string name="button_retry">重试</string>
    <string name="button_send">发送</string>
    <string name="button_send_retrieve_email">发送重置密码邮件</string>
    <string name="button_send_sms_code">发送验证码</string>
    <string name="button_to_main_page">回到登录页</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clean_unread">清除未读</string>
    <string name="cleaning">清除中...</string>
    <string name="click_more_exit">再点一次退出</string>
    <string name="collection_set_add">添加到收藏集</string>
    <string name="collection_set_create">＋ 新建收藏集</string>
    <string name="comment_tips">评论</string>
    <string name="comment_try_again">重试</string>
    <string name="company_default">添加职位 @ 添加公司</string>
    <string name="content_empty_created_collection_set">暂无创建的收藏集</string>
    <string name="content_empty_followed_collection_set">暂无关注的收藏集</string>
    <string name="content_follow_people">关注你感兴趣的人</string>
    <string name="content_no_collected_entry">暂无赞的文章</string>
    <string name="content_no_collected_entry_get_some">你还没有任何收藏 快去挖掘喜欢的文章吧！</string>
    <string name="content_no_followee">他还没有关注任何人哦</string>
    <string name="content_no_follower">他还没有关注者</string>
    <string name="content_no_message_please_talk_with_friends">"暂时没有任何消息哦
去评论区和小伙伴们互动起来吧～"</string>
    <string name="content_no_post_article">暂无文章</string>
    <string name="content_no_read_entry_find_more">你还没有阅读过文章 快去挖掘喜欢的文章吧！</string>
    <string name="content_no_subscribe_tag">暂未关注标签</string>
    <string name="content_no_system_notification">暂时没有系统通知</string>
    <string name="content_set_email_description">设置邮箱后可以通过邮箱和密码进行登录，也可以使用邮箱进行密码找回</string>
    <string name="content_set_phone_description">根据我国网络安全法，您需要绑定手机号后才可在掘金社区内发布内容。</string>
    <string name="content_user_no_follower">你还没有关注者哦，多评论可以增加人气！</string>
    <string name="content_you_followed_tag_will_show_here">你感兴趣的标签将出现在这里</string>
    <string name="create_collection_set">新建</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="design">设计</string>
    <string name="dialog_posting">发布中...</string>
    <string name="dialog_title_img_select">选择图片</string>
    <string name="dialog_title_retrieve_password">找回方式</string>
    <string name="done">确定</string>
    <string name="drawer_contributor">联合编辑列表</string>
    <string name="edit_desc_create_collection_set_desc">描述(可选)</string>
    <string name="edit_desc_create_collection_set_pic">收藏集配图(可选)</string>
    <string name="edit_desc_create_collection_set_title">名称</string>
    <string name="empty_text">No media yet</string>
    <string name="error_file_type">Unsupported file type</string>
    <string name="error_no_video_activity">No App found supporting video preview</string>
    <string name="error_over_count">You can only select up to %1$d media files</string>
    <string name="error_over_count_default">You have reached max selectable</string>
    <string name="error_over_quality">Over quality</string>
    <string name="error_type_conflict">"Can't select images and videos at the same time"</string>
    <string name="error_under_quality">Under quality</string>
    <string name="expand_all">全文</string>
    <string name="expand_less">收起</string>
    <string name="explore_title_book">小册</string>
    <string name="feedback">意见反馈</string>
    <string name="finish_profile_apply">完善资料并申请</string>
    <string name="freebies">工具资源</string>
    <string name="getting_message">正在获取信息</string>
    <string name="gold_rank">掘金周榜</string>
    <string name="growingio_enable">true</string>
    <string name="growingio_project_id">89669d96c88aefbc</string>
    <string name="growingio_url_scheme">growing.835fcaf7b1dc7c59</string>
    <string name="guide_go_home">进入首页</string>
    <string name="guide_next">下一步</string>
    <string name="guide_tag_info">关注标签，定制首页信息流</string>
    <string name="guide_user_info">关注相关领域内的高手</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_add_vote">我有话说...</string>
    <string name="hint_comment">评论</string>
    <string name="hint_create_collection_set_desc">请添加100字以内的描述</string>
    <string name="hint_create_collection_set_screen_shot">仅支持 jpg、jpeg 和 png 格式的图片</string>
    <string name="hint_create_collection_set_title">20字以内，不支持空格及特殊字符</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_no_personal_website">例如: juejin.im</string>
    <string name="hot">热门</string>
    <string name="hours_ago">%d小时前</string>
    <string name="html5">前端</string>
    <string name="info_company_job">添加职位 @ 添加公司</string>
    <string name="info_version_code_and_web_set">掘金 %s · juejin.im</string>
    <string name="intro_collection_set">收藏集功能来了，立即体验</string>
    <string name="intro_collection_set_share">分享放到这里了</string>
    <string name="ios">iOS</string>
    <string name="just_now">刚刚</string>
    <string name="key_external_derectory_device_parameter">ZQLiNFJR+CWEI4px</string>
    <string name="login_register">登录/注册</string>
    <string name="minutes_ago">%d分钟前</string>
    <string name="mq_add_picture">添加图片</string>
    <string name="mq_all_image">所有图片</string>
    <string name="mq_allocate_agent">正在分配客服...</string>
    <string name="mq_allocate_agent_tip">正在为您分配客服，请稍后重发</string>
    <string name="mq_allocate_queue_tip">正在排队，请等待客服接入后发送消息</string>
    <string name="mq_allocate_queue_title">排队等待中...</string>
    <string name="mq_already_feedback">已反馈</string>
    <string name="mq_at_least_one_contact">至少填写一种联系方式</string>
    <string name="mq_audio_status_normal">按住说话</string>
    <string name="mq_audio_status_recording">手指上滑，取消发送</string>
    <string name="mq_audio_status_want_cancel">松开手指，取消发送</string>
    <string name="mq_auth_code">验证码</string>
    <string name="mq_back" />
    <string name="mq_blacklist_tips">对不起，当前客服系统暂时无法使用</string>
    <string name="mq_camera_or_storage_no_permission">当前没有相机权限 或者 媒体访问权限</string>
    <string name="mq_cancel">取消</string>
    <string name="mq_choose">选择</string>
    <string name="mq_choose_ticket_category">选择分类</string>
    <string name="mq_confirm">确定</string>
    <string name="mq_copy_success">复制成功</string>
    <string name="mq_data_is_loading">数据加载中...</string>
    <string name="mq_dialog_select_camera">相机</string>
    <string name="mq_dialog_select_gallery">图库</string>
    <string name="mq_dialog_select_title">请选择图片来源：</string>
    <string name="mq_direct_content">接下来由 %1$s 为你服务</string>
    <string name="mq_download_audio_failure">下载录音失败!</string>
    <string name="mq_download_complete">下载完成</string>
    <string name="mq_download_error">下载文件失败</string>
    <string name="mq_download_img_failure">下载到图片失败</string>
    <string name="mq_downloading">下载中 …</string>
    <string name="mq_email">邮箱</string>
    <string name="mq_email_hint">请输入你的邮箱</string>
    <string name="mq_error_auth_code_wrong">验证码错误或者已过期</string>
    <string name="mq_error_submit_form">提交表单失败,请稍后再试</string>
    <string name="mq_evaluate_bad">差评</string>
    <string name="mq_evaluate_failure">评价失败</string>
    <string name="mq_evaluate_good">好评</string>
    <string name="mq_evaluate_hint">填写评价内容 (选填)</string>
    <string name="mq_evaluate_medium">中评</string>
    <string name="mq_evaluate_result_prefix">你给出了  </string>
    <string name="mq_evaluate_title">你对本次服务满意吗？</string>
    <string name="mq_expire_after">%1$s 小时后过期</string>
    <string name="mq_expired">已过期</string>
    <string name="mq_expired_top_tip">文件已过期，无法下载</string>
    <string name="mq_hint_input">输入</string>
    <string name="mq_input_hint">请输入...</string>
    <string name="mq_inquire_gender_choice">[男,女]</string>
    <string name="mq_leave_msg">留言</string>
    <string name="privacy"><u>“隐私政策”</u></string>
</resources>