<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/juejin_blue" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/text_white_mid_alpha" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="请输入邮箱" />
    <EditText android:textSize="14.0sp" android:textColorHint="#33000000" android:id="@id/et_input_email" android:background="@drawable/edit_login_all" android:paddingLeft="14.0dip" android:paddingTop="16.0dip" android:paddingRight="14.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:hint="@string/hint_email" android:lines="1" android:inputType="textEmailAddress" />
    <Button android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/bt_send" android:background="@drawable/button_login" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/button_send_retrieve_email" />
    <TextView android:textSize="13.0sp" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@id/tv_to_login_page" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_to_main_page" />
</LinearLayout>