<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/juejin_blue" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/rootLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
        <ImageView android:id="@id/img_juejin" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_juejin" />
        <EditText android:textSize="14.0sp" android:textColorHint="#33000000" android:id="@id/et_input_phonenum" android:background="@drawable/edit_login_top" android:paddingLeft="14.0dip" android:paddingTop="16.0dip" android:paddingRight="14.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="手机号" android:singleLine="true" android:inputType="number" />
        <include layout="@layout/line_horizontal" />
        <EditText android:textSize="14.0sp" android:textColorHint="#33000000" android:id="@id/et_username" android:background="@drawable/edit_login_normal" android:paddingLeft="14.0dip" android:paddingTop="16.0dip" android:paddingRight="14.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="用户名" android:singleLine="true" />
        <include layout="@layout/line_horizontal" />
        <im.juejin.android.base.views.widgets.EditTextPlus android:textSize="14.0sp" android:textColorHint="#33000000" android:id="@id/et_psd" android:background="@color/white" android:paddingLeft="14.0dip" android:paddingTop="16.0dip" android:paddingRight="14.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="密码" android:singleLine="true" android:inputType="textPassword" app:etp_type="checkable" />
        <RelativeLayout android:id="@id/rl_check_code" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="14.0sp" android:textColorHint="#33000000" android:id="@id/et_sms_code" android:background="@color/white" android:paddingLeft="14.0dip" android:paddingTop="16.0dip" android:paddingRight="14.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="短信验证码" android:singleLine="true" android:maxLength="10" android:inputType="number" />
            <TextView android:textColor="@color/juejin_blue" android:id="@id/tv_request_sms_code" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:text="@string/button_send_sms_code" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <include layout="@layout/line_horizontal" />
        </RelativeLayout>
        <Button android:textSize="17.0sp" android:textColor="@color/white" android:id="@id/bt_regist" android:background="@drawable/button_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="注册" />
        <RelativeLayout android:gravity="bottom|center" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textColor="@color/custom_gray_selector" android:gravity="center" android:id="@id/tv_skip" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="跳过" />
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <FrameLayout android:id="@id/check_agree_parent" android:layout_width="40.0dip" android:layout_height="60.0dip">
                <CheckBox android:gravity="center" android:layout_gravity="end|center" android:id="@id/check_agree" android:background="@drawable/agreement_check" android:padding="0.0dip" android:layout_width="14.0dip" android:layout_height="14.0dip" android:button="@null" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" />
            </FrameLayout>
            <TextView android:textSize="14.0sp" android:textColor="#8effffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="我已阅读并同意" />
            <TextView android:textSize="14.0sp" android:textColor="#8effffff" android:autoLink="all" android:id="@id/user_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/agreement" />
            <TextView android:textSize="14.0sp" android:textColor="#8effffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="与" />
            <TextView android:textSize="14.0sp" android:textColor="#8effffff" android:autoLink="all" android:id="@id/privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/privacy" android:layout_marginEnd="20.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>