<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/root_layout" android:background="@color/juejin_blue" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="56.0dip">
        <ImageView android:id="@id/iv_back" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/toolbar_back_white" android:layout_centerVertical="true" android:layout_marginStart="15.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/tv_phone_option" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="注册账号" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="15.0dip" />
    </RelativeLayout>
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/img_juejin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_login_logo" />
    <LinearLayout android:orientation="vertical" android:id="@id/login_wrapper" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="23.0dip" android:layout_marginRight="20.0dip">
        <EditText android:textSize="16.0sp" android:textColorHint="#33000000" android:id="@id/et_input_phonenum" android:background="@drawable/edit_login_top" android:paddingLeft="14.0dip" android:paddingTop="16.0dip" android:paddingRight="14.0dip" android:paddingBottom="16.0dip" android:nextFocusDown="@id/et_psd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="手机号/邮箱" android:maxLines="1" android:inputType="text" />
        <View android:background="#ff979797" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <EditText android:textSize="16.0sp" android:textColorHint="#33000000" android:id="@id/et_psd" android:background="@drawable/edit_login_bottom" android:paddingLeft="14.0dip" android:paddingTop="16.0dip" android:paddingRight="14.0dip" android:paddingBottom="16.0dip" android:nextFocusDown="@id/btn_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="密码" android:maxLines="1" android:inputType="textPassword" android:imeOptions="actionGo" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_login" android:background="@drawable/button_login" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="12.0dip" android:text="@string/button_login" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/login_text_selector" android:gravity="center_vertical" android:id="@id/ignore_psd" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="忘记密码？" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true" />
        <TextView android:textSize="14.0sp" android:textColor="#ffd3e9ff" android:gravity="center_vertical" android:id="@id/third_login" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="第三方登录" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/layout_third_login" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="60.0dip" android:layout_marginRight="20.0dip">
            <View android:background="#4d000000" android:layout_width="0.0dip" android:layout_height="1.0px" android:layout_weight="1.0" />
            <TextView android:textSize="12.0sp" android:textColor="#ff004787" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="其他账号登录" />
            <View android:background="#4d000000" android:layout_width="0.0dip" android:layout_height="1.0px" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/bt_weibo_login" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/login_weibo_selector" />
                <TextView android:textColor="@color/login_text_selector" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="微博" />
            </LinearLayout>
            <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/bt_wechat_login" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/wechat_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/login_wechat_selector" />
                <TextView android:textColor="@color/login_text_selector" android:gravity="center_horizontal" android:id="@id/wechat_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="微信" />
            </LinearLayout>
            <Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/bt_github_login" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/github_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/login_github_selector" />
                <TextView android:textColor="@color/login_text_selector" android:gravity="center_horizontal" android:id="@id/github_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Github" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
        <FrameLayout android:layout_gravity="center_vertical" android:id="@id/check_agree_parent" android:layout_width="30.0dip" android:layout_height="50.0dip">
            <CheckBox android:gravity="center" android:layout_gravity="end|center" android:id="@id/check_agree" android:background="@drawable/agreement_check" android:padding="0.0dip" android:layout_width="14.0dip" android:layout_height="14.0dip" android:button="@null" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" />
        </FrameLayout>
        <TextView android:textSize="14.0sp" android:textColor="#8effffff" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="我已阅读并同意" />
        <TextView android:textSize="14.0sp" android:textColor="#8effffff" android:autoLink="all" android:layout_gravity="center_vertical" android:id="@id/user_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agreement" />
        <TextView android:textSize="14.0sp" android:textColor="#8effffff" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="与" />
        <TextView android:textSize="14.0sp" android:textColor="#8effffff" android:autoLink="all" android:layout_gravity="center_vertical" android:id="@id/privacy_policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy" android:layout_marginEnd="20.0dip" />
    </LinearLayout>
</LinearLayout>